gcc/testsuite/rust/rustc/ui/parser/issue-70552-ascription-in-parens-after-call.rs
fn main() {
    expr as fun()(:); // { dg-error "" "" { target *-*-* } }
}

